[package]
name = "onewire"
version = "0.4.0"
authors = ["Michael Watzko <michael@watzko.de>", "Sami J. Mäkinen <sjm@iki.fi>"]
repository = "https://github.com/sjm42/onewire"
description = "OneWire implementation using embedded_hal as abstraction layer, based on arduino OneWire library. WIP"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]

[dependencies]
byteorder = { version = "1", default-features = false }
embedded-hal = { version = "1" }
